KUBE_MANIFEST/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopwebmvc-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eshopwebmvc
  template:
    metadata:
      labels:
        app: eshopwebmvc
    spec:
      containers:
        - name: eshopwebmvc
          image: dannydee93/eshopwebmvc:latest
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshoppublicapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eshoppublicapi
  template:
    metadata:
      labels:
        app: eshoppublicapi
    spec:
      containers:
        - name: eshoppublicapi
          image: dannydee93/eshoppublicapi:latest
          ports:
            - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/azure-sql-edge
          ports:
            - name: http
              containerPort: 1433
